fixed scrollbar issue

--- a/css/theme.css
+++ b/css/theme.css
@@ -2,6 +2,7 @@ body {
   padding-top: 70px;
   padding-bottom: 200px;
   font-weight: normal;
+  width: calc(100vw - 17px);
 }
 
 .theme-dropdown .dropdown-menu {
